# whatsie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/: FUNDING.yml
.github/workflows/: release-artifacts.yml  tests.yml  windows-build.yml  windows-codecs-build.yml
DOCS/: BUILD_QUICK_REFERENCE.md  CMAKE_MIGRATION.md  TRANSLATIONS.md  WINDOWS_BUILD.md
debian/: changelog
debianpkg/: README.md  gitignore.txt
debianpkg/data/: net.shakaran.whatly.desktop
debianpkg/debian/: control  copyright  rules
docs/: CHANGELOG.md  index.html
packaging/: signpath-application.md  windows-signing.md
packaging/rpm/: whatly.spec
snap/: snapcraft.yaml
src/: about.cpp  about.h  about.ui  chattheme.cpp  chattheme.h  chatwallpaper.cpp  commandpalette.cpp  commandpalette.h  customcss.cpp  customtitlebar.cpp  debuglog.cpp  debuglog.h  dictionaries.cpp  downloadmanagerwidget.cpp  focusmode.cpp  focusmode.h  icons.qrc  linkeddevicename.cpp  linkeddevicename.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_accounts.cpp  mainwindow_lock.cpp  mainwindow_tray.cpp  mainwindow_webengine.cpp  mutedstatus.cpp  mutedstatus.h  notificationpopup.h  pagebridge.h  performance.cpp  performance.h  privacyblur.cpp  rateapp.cpp  rateapp.ui  scheduledmessages.cpp  scheduledmessages.h  scheduledmessagesdialog.cpp  scheduledmessagesdialog.h  screenlock.cpp  (+17 more)
src/i18n/: ar_SA.ts  de_DE.ts  es_ES.ts  fr_FR.ts  hi_IN.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  tr_TR.ts  zh_CN.ts
src/widgets/MoreApps/: moreapps.cpp
tests/: CMakeLists.txt  tst_logic.cpp  tst_settings.cpp  tst_ui_assets.cpp
tools/: README.md  capture-main.sh  cdp-eval.py  cdp-screenshot.py  make-cards.py  make-icons.py  make-screenshots.sh
tools/video/: .gitignore
tools/video/whatly-promo/: BRIEF.md  STORYBOARD.md  audio_engine_meta.json  audio_meta.json  frame.md  index.html  meta.json  package.json
tools/video/whatly-promo/capture/extracted/: asset-descriptions.md  tokens.json
tools/video/whatly-promo/compositions/frames/: 01-logo.html  02-hero-dark.html  03-hero-light.html  04-scheduled.html  05-themes.html  06-accounts.html  07-power.html  08-desktop.html  09-outro.html
